--- a/src/main/webapp/WEB-INF/templates/users/list.html
+++ b/src/main/webapp/WEB-INF/templates/users/list.html
@@ -175,10 +175,11 @@
         </tbody>
     </table>
 
-    <div class="empty-state" id="emptyState">
+    <div th:if="${#lists.isEmpty(users)}" class="empty-state" id="emptyState">
         <h3>No Users Found</h3>
         <p>Click "Add New User" to create your first user.</p>
     </div>
+
 </div>
 
 <script>
